update logo bigdata

--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
 		<div class="div-becas">
 			PROGRAMA DE BECAS AWS GIRLS
 			<p>Surge como iniciativa de acercar a más mujeres hacia un espacio tecnológico</p>
-			<a href="https://awsgirlspe.typeform.com/to/Fw1xiQon" target="_blank">POSTULA AQUI</a>
+			<a href="https://forms.gle/Ee284iPckQabXdwD8" target="_blank">POSTULA AQUÍ</a>
 		</div>
 	</div>
 
@@ -466,14 +466,14 @@
 			<h3 class="h3-community">Nuestros Partners</h3>
 
 			<div class="row">
-				<div class="col-sm-4">
+				<div class="col-sm-3">
 					<div class="card-sponsors">
 						<div>
 							<a target="_blank" href="http://bootcamp.institute/"><img src="assets/img/sponsors/bootcamp.png" alt=""></a>
 						</div>
 					</div>
 				</div>
-				<div class="col-sm-4">
+				<div class="col-sm-3">
 					<div class="card-sponsors">
 						<div>
 							<a target="_blank" href="https://ihum.ai/">
@@ -482,7 +482,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="col-sm-4">
+				<div class="col-sm-3">
 					<div class="card-sponsors">
 						<div>
 							<a target="_blank" href="https://elementi.me/">
@@ -492,13 +492,13 @@
 						</div>
 					</div>
 				</div>
-				<!-- <div class="col-sm-3">
+				<div class="col-sm-3">
 					<div class="card-sponsors">
 						<div>
-							<img src="assets/img/sponsors/caleidos.png" alt="">
+							<img src="assets/img/sponsors/bigdataacademy.png" alt="">
 						</div>
 					</div>
-				</div> -->
+				</div>
 			</div>
 			
 
