--- a/index.html
+++ b/index.html
@@ -155,32 +155,76 @@
 		</div>
 	</section>
 
-	<!-- <section class="section-events">
+	 <section class="section-events">
 		<div class="container">
 			<div class="row">
 				<div class="col-sm-6">
 					<h6 class="span-text">PRÓXIMO EVENTO</h6>
 					<div class="card-event">
-						<div>Sábado 4 de julio, 15:00 GTM-5</div>
-						<p>Meetup AWS CodeGuru vs Amazon HoneyCode</p>
-						<div>
-							<span>Evento en línea por twitch</span>
+						<div class="date-event">
+							<span>Sábado 5 de Septiembre, 15:00 - 17:00 UTC-5</span>
+						</div>
+						<div class="title-event">
+							<span>¿Cómo trabajar en AWS? | DevOps Demo</span>
+						</div>
+						<div class="transmition-event">
+							<img src="assets/img/twitch-icon.png" alt=""> <span>Evento en línea <a href="https://www.twitch.tv/usergroup_awsgirlsperu"><span class="span-purple">por twitch</span></a> </span>
 						</div>
 						<hr class="divider-card">
-						<div>SPEAKERS:</div>
-						<div>
-							<p>Arturo Díaz</p>
-							<p>Partner & Gerente de Arquitectura Digital Bwit Perú</p>
+						<div class="title-speaker">
+							<p>SPEAKERS:</p>
+						</div>
+						<div class="speaker-event">
+							<div class="li-yellow"></div>
+							<div>
+								<p>Victoria Lezcano</p>
+								<p>AWS Enterprise Account Manager</p>
+							</div>
+						</div>
+						<div class="speaker-event">
+							<div class="li-yellow"></div>
+							<div>
+								<p>Laura Gareis</p>
+								<p>AWS Partner Development Manager</p>
+							</div>
+						</div>
+						<div class="speaker-event">
+							<div class="li-yellow"></div>
+							<div>
+								<p>Laura Alvarez</p>
+								<p>AWS Senior Public Sector Programs Manager</p>
+							</div>
+						</div>
+						<div class="speaker-event">
+							<div class="li-yellow"></div>
+							<div>
+								<p>Lorena Zicker</p>
+								<p>AWS Public Sector Regional Manager</p>
+							</div>
+						</div>
+						<div class="speaker-event">
+							<div class="li-yellow"></div>
+							<div>
+								<p>Valeria Quintanilla</p>
+								<p>DevOps Specialist en Diners Club</p>
+							</div>
+						</div>
+						<div class="speaker-event">
+							<div class="li-yellow"></div>
+							<div>
+								<p>Lorena Zicker</p>
+								<p> Cloud Engineer en Globant</p>
+							</div>
 						</div>
 						<div class="div-footer-card">
 							<div class="ml-auto">
-								<span>¿Te interesa?</span> <button type="button" class="btn btn-register">¡Regístrate ahora!</button>
+								<span class="text-event">¿Te interesa?</span> <a href="https://www.eventbrite.com/e/aws-girls-inspira-tickets-118989985249" target="_blank"><button type="button" class="btn btn-register btn-event">¡Regístrate ahora!</button></a> 
 							</div>
 						</div>
 					</div>
 				</div>
 				<div class="col-sm-6">
-					<h6 class="span-text">ÚLTIMO EVENTO</h6>
+					<!-- <h6 class="span-text">ÚLTIMO EVENTO</h6>
 					<div class="card-event">
 						<div>Sábado 27 de junio, 15:00 GTM-5</div>
 						<p>AWS Lightsail, Glue y Analítica de Tweets</p>
@@ -198,11 +242,11 @@
 								<span>¿Te lo perdiste?</span> <button type="button" class="btn btn-register">Mira la grabación</button>
 							</div>
 						</div>
-					</div>
+					</div> -->
 				</div>
 			</div>
 		</div>
-	</section> -->
+	</section> 
 
 	<div class="container">
 		<div class="div-twitch">
@@ -214,7 +258,7 @@
 		<div class="div-becas">
 			PROGRAMA DE BECAS AWS GIRLS
 			<p>Surge como iniciativa de acercar a más mujeres hacia un espacio tecnológico</p>
-			<a href="https://forms.gle/Ee284iPckQabXdwD8" target="_blank">POSTULA AQUÍ</a>
+			<a href="https://forms.gle/scpmWayMLtSkVpqa7" target="_blank">POSTULA AQUÍ</a>
 		</div>
 	</div>
 
