update AWS Certified Global Challenge

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 						<img src="assets/img/calendar.png">
 					</div>
 					<div class="div-counter">
-						<h2 class="cl-purple">5</h2>
+						<h2 class="cl-purple">6</h2>
 						<p >Meetups organizados</p>
 					</div>
 				</div>
@@ -138,7 +138,7 @@
 						<img src="assets/img/group.png">
 					</div>
 					<div class="div-counter">
-						<h2 class="cl-purple">390</h2>
+						<h2 class="cl-purple">460</h2>
 						<p >Asistentes en streaming</p>
 					</div>
 				</div>
@@ -147,7 +147,7 @@
 						<img src="assets/img/speaker.png">
 					</div>
 					<div class="div-counter">
-						<h2 class="cl-purple">26</h2>
+						<h2 class="cl-purple">32</h2>
 						<p >speakers en total</p>
 					</div>
 				</div>
@@ -160,6 +160,61 @@
 			<div class="row">
 				<div class="col-sm-6">
 					<h6 class="span-text">PRÓXIMO EVENTO</h6>
+					<div class="card-event">
+						<span>BOOTCAMP SÁBADOS Y DOMINGOS DE 2:00 P.M. a 6:00 P.M. (CDT)</span>
+						<div class="title-event">
+							<span>Get AWS Certified Global Challenge</span>
+						</div>
+						<div class="transmition-event">
+							<img src="assets/img/twitch-icon.png" alt=""> <span>Evento en línea <a href="https://www.twitch.tv/usergroup_awsgirlsperu"><span class="span-purple">por twitch</span></a> </span>
+						</div>
+						<hr class="divider-card">
+						<div class="title-speaker">
+							<p>SPEAKERS:</p>
+						</div>
+						<div class="speaker-event">
+							<div class="li-yellow"></div>
+							<div>
+								<p>Valeria Quintanilla</p>
+								<p>DevOps Specialist - Sábado, 31 Octubre</p>
+							</div>
+						</div>
+						<div class="speaker-event">
+							<div class="li-yellow"></div>
+							<div>
+								<p>Doris Manrique
+								</p>
+								<p>Cloud Solution Architect - Sábado, 7 Noviembre
+								</p>
+							</div>
+						</div>
+						<div class="speaker-event">
+							<div class="li-yellow"></div>
+							<div>
+								<p>Cristina Cuetlach
+								</p>
+								<p>Cloud Engineer - Domingo, 01 Noviembre
+								</p>
+							</div>
+						</div>
+						<div class="speaker-event">
+							<div class="li-yellow"></div>
+							<div>
+								<p>Carolina Herrera
+								</p>
+								<p>DevOps Architect - Domingo, 08 Noviembre
+								</p>
+							</div>
+						</div>
+						<div class="div-footer-card">
+							<div class="ml-auto">
+								<span class="text-event">¿Te interesa?</span> <a href="https://www.eventbrite.com/e/aws-girls-inspira-tickets-118989985249" target="_blank"><button type="button" class="btn btn-register btn-event">¡Regístrate ahora!</button></a> 
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="col-sm-6">
+					<h6 class="span-text">ÚLTIMO EVENTO</h6>
 					<div class="card-event">
 						<div class="date-event">
 							<span>Sábado 5 de Septiembre, 15:00 - 17:00 UTC-5</span>
@@ -218,31 +273,10 @@
 						</div>
 						<div class="div-footer-card">
 							<div class="ml-auto">
-								<span class="text-event">¿Te interesa?</span> <a href="https://www.eventbrite.com/e/aws-girls-inspira-tickets-118989985249" target="_blank"><button type="button" class="btn btn-register btn-event">¡Regístrate ahora!</button></a> 
-							</div>
-						</div>
-					</div>
-				</div>
-				<div class="col-sm-6">
-					<!-- <h6 class="span-text">ÚLTIMO EVENTO</h6>
-					<div class="card-event">
-						<div>Sábado 27 de junio, 15:00 GTM-5</div>
-						<p>AWS Lightsail, Glue y Analítica de Tweets</p>
-						<div>
-							<span>Evento en línea por twitch</span>
-						</div>
-						<hr class="divider-card">
-						<div>SPEAKERS:</div>
-						<div>
-							<p>Raúl Hugo</p>
-							<p>Solutions Architect en AWS</p>
-						</div>
-						<div class="div-footer-card">
-							<div class="ml-auto">
 								<span>¿Te lo perdiste?</span> <button type="button" class="btn btn-register">Mira la grabación</button>
 							</div>
 						</div>
-					</div> -->
+					</div>
 				</div>
 			</div>
 		</div>
@@ -254,13 +288,13 @@
 		</div>
 	</div>
 
-	<div class="section-becas ">
+	<!-- <div class="section-becas ">
 		<div class="div-becas">
 			PROGRAMA DE BECAS AWS GIRLS
 			<p>Surge como iniciativa de acercar a más mujeres hacia un espacio tecnológico</p>
 			<a href="https://forms.gle/scpmWayMLtSkVpqa7" target="_blank">POSTULA AQUÍ</a>
 		</div>
-	</div>
+	</div> -->
 
 
 
@@ -325,8 +359,8 @@
 			</div>
 			<h3 class="h3-community">Nuestros voluntarios</h3>
 
-			<div class="row ">
-				<div class="col-sm-4 ">
+			<div class="row d-center">
+				<!-- <div class="col-sm-4 ">
 					<div class="card-volunteers">
 						<div>
 							<img  class="img-photo" src="assets/img/volunteers/photo-linkedin.jpeg" alt="">
@@ -338,7 +372,7 @@
 							</a>
 						</div>
 					</div>
-				</div>
+				</div> -->
 				<div class="col-sm-4 ">
 					<div class="card-volunteers">
 						<div>
@@ -355,6 +389,61 @@
 				<div class="col-sm-4 ">
 					<div class="card-volunteers">
 						<div>
+							<img  class="img-photo" src="assets/img/volunteers/anaisabel.jpeg" alt="">
+						</div>
+						<div class="ml-3">
+							<p>Ana Isabel Cueva</p>
+							<a href="https://www.linkedin.com/in/ana-isabel-cueva/" target="_blank">
+								<img class="img-linkedin" src="assets/img/linkedin-icon.png" alt="">
+							</a>
+						</div>
+					</div>
+				</div>
+				<div class="col-sm-4 ">
+					<div class="card-volunteers">
+						<div>
+							<img  class="img-photo" src="assets/img/volunteers/erikavidal.jpg" alt="">
+						</div>
+						<div class="ml-3">
+							<p>Erika Vidal Capillo
+							</p>
+							<a href="https://www.linkedin.com/in/erika-diana-vidal-capillo/" target="_blank">
+								<img class="img-linkedin" src="assets/img/linkedin-icon.png" alt="">
+							</a>
+						</div>
+					</div>
+				</div>
+				<div class="col-sm-4 ">
+					<div class="card-volunteers">
+						<div>
+							<img  class="img-photo" src="assets/img/volunteers/cindymendoza.jpg" alt="">
+						</div>
+						<div class="ml-3">
+							<p>Cindy Mendoza Ibarra
+							</p>
+							<a href="https://www.linkedin.com/in/mendozacindy/" target="_blank">
+								<img class="img-linkedin" src="assets/img/linkedin-icon.png" alt="">
+							</a>
+						</div>
+					</div>
+				</div>
+				<div class="col-sm-4 ">
+					<div class="card-volunteers">
+						<div>
+							<img  class="img-photo" src="assets/img/volunteers/yuliatrujillo.jpg" alt="">
+						</div>
+						<div class="ml-3">
+							<p>Yulia Trujillo
+							</p>
+							<a href="https://www.linkedin.com/in/yuliatrujillo/" target="_blank">
+								<img class="img-linkedin" src="assets/img/linkedin-icon.png" alt="">
+							</a>
+						</div>
+					</div>
+				</div>
+				<!-- <div class="col-sm-4 ">
+					<div class="card-volunteers">
+						<div>
 							<img  class="img-photo" src="assets/img/volunteers/isabel.jpeg" alt="">
 						</div>
 						<div class="ml-3">
@@ -364,11 +453,11 @@
 							</a>
 						</div>
 					</div>
-				</div>
+				</div> -->
 			</div>
 			
-			<div class="row">
-				<div class="col-sm-4 ">
+			<!-- <div class="row"> -->
+				<!-- <div class="col-sm-4 ">
 					<div class="card-volunteers">
 						<div>
 							<img  class="img-photo" src="assets/img/volunteers/nefi.jpeg" alt="">
@@ -380,8 +469,8 @@
 							</a>
 						</div>
 					</div>
-				</div>
-				<div class="col-sm-4 ">
+				</div> -->
+				<!-- <div class="col-sm-4 ">
 					<div class="card-volunteers">
 						<div>
 							<img  class="img-photo" src="assets/img/volunteers/walter.jpeg" alt="">
@@ -393,8 +482,8 @@
 							</a>
 						</div>
 					</div>
-				</div>
-				<div class="col-sm-4 ">
+				</div> -->
+				<!-- <div class="col-sm-4 ">
 					<div class="card-volunteers">
 						<div>
 							<img  class="img-photo" src="assets/img/volunteers/bianca.jpeg" alt="">
@@ -406,11 +495,11 @@
 							</a>
 						</div>
 					</div>
-				</div>
-			</div>
+				</div> -->
+			<!-- </div> -->
 
-			<div class="row">
-				<div class="col-sm-4 ">
+			<!-- <div class="row"> -->
+				<!-- <div class="col-sm-4 ">
 					<div class="card-volunteers">
 						<div>
 							<img  class="img-photo" src="assets/img/volunteers/kiara.jpeg" alt="">
@@ -422,8 +511,8 @@
 							</a>
 						</div>
 					</div>
-				</div>
-				<div class="col-sm-4 ">
+				</div> -->
+				<!-- <div class="col-sm-4 ">
 					<div class="card-volunteers">
 						<div>
 							<img  class="img-photo" src="assets/img/volunteers/jenny.jpeg" alt="">
@@ -435,8 +524,8 @@
 							</a>
 						</div>
 					</div>
-				</div>
-				<div class="col-sm-4 ">
+				</div> -->
+				<!-- <div class="col-sm-4 ">
 					<div class="card-volunteers">
 						<div>
 							<img  class="img-photo" src="assets/img/volunteers/ada.jpeg" alt="">
@@ -448,25 +537,13 @@
 							</a>
 						</div>
 					</div>
-				</div>
-			</div>
+				</div> -->
+			<!-- </div> -->
 
 
 
 			<div class="row">
-				<div class="col-sm-4 ">
-					<div class="card-volunteers">
-						<div>
-							<img  class="img-photo" src="assets/img/volunteers/anaisabel.jpeg" alt="">
-						</div>
-						<div class="ml-3">
-							<p>Ana Isabel Cueva</p>
-							<a href="https://www.linkedin.com/in/ana-isabel-cueva/" target="_blank">
-								<img class="img-linkedin" src="assets/img/linkedin-icon.png" alt="">
-							</a>
-						</div>
-					</div>
-				</div>
+				
 				<div class="col-sm-4 ">
 					<!-- <div class="card-volunteers">
 						<div>
@@ -500,7 +577,7 @@
 	</div>
 
 
-	<div class="section-sponsors mb-5" id="section3">
+	<!-- <div class="section-sponsors mb-5" id="section3">
 		<div class="container text-center">
 			<div class="div-span-ligth">
 				<span class="span-ligth">
@@ -548,7 +625,7 @@
 
 
 		</div>
-	</div>
+	</div> -->
 
 	<div class="section-contact" id="section4">
 		<div class="container ">
