--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
 						</div>
 						<div class="div-footer-card">
 							<div class="ml-auto">
-								<span class="text-event">¿Te interesa?</span> <a href="https://www.eventbrite.com/e/aws-girls-inspira-tickets-118989985249" target="_blank"><button type="button" class="btn btn-register btn-event">¡Regístrate ahora!</button></a> 
+								<span class="text-event">¿Te interesa?</span> <a href="https://www.eventbrite.com/e/get-aws-certified-global-challenge-tickets-126722433209" target="_blank"><button type="button" class="btn btn-register btn-event">¡Regístrate ahora!</button></a> 
 							</div>
 						</div>
 					</div>
@@ -273,7 +273,7 @@
 						</div>
 						<div class="div-footer-card">
 							<div class="ml-auto">
-								<span>¿Te lo perdiste?</span> <button type="button" class="btn btn-register">Mira la grabación</button>
+								<span>¿Te lo perdiste?</span> <a href="https://www.twitch.tv/videos/732430780" target="_blank" rel="noopener noreferrer"><button type="button" class="btn btn-register">Mira la grabación</button></a>
 							</div>
 						</div>
 					</div>
@@ -436,6 +436,20 @@
 							<p>Yulia Trujillo
 							</p>
 							<a href="https://www.linkedin.com/in/yuliatrujillo/" target="_blank">
+								<img class="img-linkedin" src="assets/img/linkedin-icon.png" alt="">
+							</a>
+						</div>
+					</div>
+				</div>
+				<div class="col-sm-4 ">
+					<div class="card-volunteers">
+						<div>
+							<img  class="img-photo" src="assets/img/volunteers/anitaquevedo.jpg" alt="">
+						</div>
+						<div class="ml-3">
+							<p>Anita Quevedo
+							</p>
+							<a href="https://www.linkedin.com/in/aquevedos91/" target="_blank">
 								<img class="img-linkedin" src="assets/img/linkedin-icon.png" alt="">
 							</a>
 						</div>
@@ -728,6 +742,7 @@
 			Developed by <span class="name-bold">Liz Ruelas Borda</span>
 		</div>
 	</div>
+	
 	<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
