delete voluntary and section partners

--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
 						<li class="nav-item">
 							<a class="nav-link" href="#section2" >Voluntarios</a>
 						</li>
-						<li class="nav-item">
+						<!-- <li class="nav-item">
 							<a class="nav-link" href="#section3">Partners</a>
-						</li>
+						</li> -->
 						<li class="nav-item">
 							<a class="nav-link" href="#section4">Contacto</a>
 						</li>
@@ -360,7 +360,7 @@
 			<h3 class="h3-community">Nuestros voluntarios</h3>
 
 			<div class="row d-center">
-				<!-- <div class="col-sm-4 ">
+				<div class="col-sm-4 ">
 					<div class="card-volunteers">
 						<div>
 							<img  class="img-photo" src="assets/img/volunteers/photo-linkedin.jpeg" alt="">
@@ -372,7 +372,7 @@
 							</a>
 						</div>
 					</div>
-				</div> -->
+				</div>
 				<div class="col-sm-4 ">
 					<div class="card-volunteers">
 						<div>
@@ -441,7 +441,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="col-sm-4 ">
+				<!-- <div class="col-sm-4 ">
 					<div class="card-volunteers">
 						<div>
 							<img  class="img-photo" src="assets/img/volunteers/anitaquevedo.jpg" alt="">
@@ -454,7 +454,7 @@
 							</a>
 						</div>
 					</div>
-				</div>
+				</div> -->
 				<!-- <div class="col-sm-4 ">
 					<div class="card-volunteers">
 						<div>
@@ -736,10 +736,10 @@
 
 	<div class="footer py-4">
 		<div class="container text-center">
-			Designed with love by <span class="name-bold">Kiara Ezquerra Ferruzo</span>
+			Designed with love By <span class="name-bold">Kiara Ezquerra Ferruzo</span>
 		</div>
 		<div class="container text-center">
-			Developed by <span class="name-bold">Liz Ruelas Borda</span>
+			Developed By <span class="name-bold">Liz Ruelas Borda</span>
 		</div>
 	</div>
 	
