--- a/index.html
+++ b/index.html
@@ -156,131 +156,283 @@
 	</section>
 
 	 <section class="section-events">
-		<div class="container">
-			<div class="row">
-				<div class="col-sm-6">
-					<h6 class="span-text">PRÓXIMO EVENTO</h6>
-					<div class="card-event">
-						<span>BOOTCAMP SÁBADOS Y DOMINGOS DE 2:00 P.M. a 6:00 P.M. (CDT)</span>
-						<div class="title-event">
-							<span>Get AWS Certified Global Challenge</span>
-						</div>
-						<div class="transmition-event">
-							<img src="assets/img/twitch-icon.png" alt=""> <span>Evento en línea <a href="https://www.twitch.tv/usergroup_awsgirlsperu"><span class="span-purple">por twitch</span></a> </span>
-						</div>
-						<hr class="divider-card">
-						<div class="title-speaker">
-							<p>SPEAKERS:</p>
-						</div>
-						<div class="speaker-event">
-							<div class="li-yellow"></div>
-							<div>
-								<p>Valeria Quintanilla</p>
-								<p>DevOps Specialist - Sábado, 31 Octubre</p>
+			<div class="container">
+				<div class="row">
+					<div class="col-sm-6">
+						<h6 class="span-text">PRÓXIMO EVENTO</h6>
+						<div class="card-event">
+							<span>CURSO GRATUITO 38 HORAS DE PREPARACIÓN - SÁBADOS Y DOMINGOS EN SESIONES
+								DE 90 MINUTOS.
+							</span>
+							<div class="title-event">
+								<span>Get AWS Certified Solution Architect Associate</span>
 							</div>
-						</div>
-						<div class="speaker-event">
-							<div class="li-yellow"></div>
-							<div>
-								<p>Doris Manrique
-								</p>
-								<p>Cloud Solution Architect - Sábado, 7 Noviembre
-								</p>
+							<div class="transmition-event">
+								<img src="assets/img/twitch-icon.png" alt=""> <span>Evento en línea <a href="https://www.twitch.tv/usergroup_awsgirlsperu"><span class="span-purple">por twitch</span></a> </span>
 							</div>
-						</div>
-						<div class="speaker-event">
-							<div class="li-yellow"></div>
-							<div>
-								<p>Cristina Cuetlach
-								</p>
-								<p>Cloud Engineer - Domingo, 01 Noviembre
-								</p>
+							<hr class="divider-card">
+							<div class="title-speaker">
+								<p>SPEAKERS:</p>
 							</div>
-						</div>
-						<div class="speaker-event">
-							<div class="li-yellow"></div>
-							<div>
-								<p>Carolina Herrera
-								</p>
-								<p>DevOps Architect - Domingo, 08 Noviembre
-								</p>
+							<div class="speaker-event">
+								<div class="li-yellow"></div>
+								<div>
+									<p>Presentación e introdución Equipo AWS Girls</p>
+									<p>Sábado, 14 Agosto</p>
+								</div>
 							</div>
-						</div>
-						<div class="div-footer-card">
-							<div class="ml-auto">
-								<span class="text-event">¿Te interesa?</span> <a href="https://www.eventbrite.com/e/get-aws-certified-global-challenge-tickets-126722433209" target="_blank"><button type="button" class="btn btn-register btn-event">¡Regístrate ahora!</button></a> 
+							<div class="speaker-event">
+								<div class="li-yellow"></div>
+								<div>
+									<p>Adriana Ávila</p>
+									<p>Domingo, 15 Agosto</p>
+								</div>
 							</div>
+							<div class="speaker-event">
+								<div class="li-yellow"></div>
+								<div>
+									<p>Maria Lyssette Galindo
+									</p>
+									<p>Sábado, 21 Agosto
+									</p>
+								</div>
+							</div>
+							<div class="speaker-event">
+								<div class="li-yellow"></div>
+								<div>
+									<p>Andrea Ahumada
+									</p>
+									<p>Domingo, 22 Agosto
+									</p>
+								</div>
+							</div>
+							<div class="speaker-event">
+								<div class="li-yellow"></div>
+								<div>
+									<p>Jennifer Burga
+									</p>
+									<p>Sábado, 28 Agosto
+									</p>
+								</div>
+							</div>
+							<div class="speaker-event">
+								<div class="li-yellow"></div>
+								<div>
+									<p>Lu Dorado
+									</p>
+									<p>Domingo, 29 Agosto
+									</p>
+								</div>
+							</div>
+							<div class="speaker-event">
+								<div class="li-yellow"></div>
+								<div>
+									<p>Elizabeth Fuentes
+									</p>
+									<p>Sábado, 04 Septiembre
+									</p>
+								</div>
+							</div>
+							<div class="speaker-event">
+								<div class="li-yellow"></div>
+								<div>
+									<p>Sofía Romero (AWS)
+									</p>
+									<p>Domingo, 05 Septiembre
+									</p>
+								</div>
+							</div>
+							<div class="speaker-event">
+								<div class="li-yellow"></div>
+								<div>
+									<p>Bianca Torres
+									</p>
+									<p>Sábado, 11 Septiembre
+									</p>
+								</div>
+							</div>
+							<div class="speaker-event">
+								<div class="li-yellow"></div>
+								<div>
+									<p>Tulio Reyes (AWS)
+									</p>
+									<p>Domingo, 12 Septiembre
+									</p>
+								</div>
+							</div>
+							<div class="speaker-event">
+								<div class="li-yellow"></div>
+								<div>
+									<p>Jenny Lucia
+									</p>
+									<p>Sábado, 18 Septiembre
+									</p>
+								</div>
+							</div>
+							<div class="speaker-event">
+								<div class="li-yellow"></div>
+								<div>
+									<p>Diana Paredes
+									</p>
+									<p>Domingo, 19 Septiembre
+									</p>
+								</div>
+							</div>
+							<div class="speaker-event">
+								<div class="li-yellow"></div>
+								<div>
+									<p>Eligia
+									</p>
+									<p>Sábado, 25 Septiembre
+									</p>
+								</div>
+							</div>
+							
 						</div>
 					</div>
-				</div>
-				<div class="col-sm-6">
-					<h6 class="span-text">ÚLTIMO EVENTO</h6>
-					<div class="card-event">
-						<div class="date-event">
-							<span>Sábado 5 de Septiembre, 15:00 - 17:00 UTC-5</span>
-						</div>
-						<div class="title-event">
-							<span>¿Cómo trabajar en AWS? | DevOps Demo</span>
-						</div>
-						<div class="transmition-event">
-							<img src="assets/img/twitch-icon.png" alt=""> <span>Evento en línea <a href="https://www.twitch.tv/usergroup_awsgirlsperu"><span class="span-purple">por twitch</span></a> </span>
-						</div>
-						<hr class="divider-card">
-						<div class="title-speaker">
-							<p>SPEAKERS:</p>
-						</div>
-						<div class="speaker-event">
-							<div class="li-yellow"></div>
-							<div>
-								<p>Victoria Lezcano</p>
-								<p>AWS Enterprise Account Manager</p>
+					<div class="col-sm-6">
+						<!-- <h6 class="span-text">ÚLTIMO EVENTO</h6> -->
+						<div class="card-event">
+							
+							<div class="speaker-event">
+								<div class="li-yellow"></div>
+								<div>
+									<p>Gabriela Díaz (AWS)
+									</p>
+									<p>Domingo, 26 Septiembre
+									</p>
+								</div>
 							</div>
-						</div>
-						<div class="speaker-event">
-							<div class="li-yellow"></div>
-							<div>
-								<p>Laura Gareis</p>
-								<p>AWS Partner Development Manager</p>
+							<div class="speaker-event">
+								<div class="li-yellow"></div>
+								<div>
+									<p>Claudia Izquierdo (AWS)
+									</p>
+									<p>Sábado, 02 Octubre
+									</p>
+								</div>
 							</div>
-						</div>
-						<div class="speaker-event">
-							<div class="li-yellow"></div>
-							<div>
-								<p>Laura Alvarez</p>
-								<p>AWS Senior Public Sector Programs Manager</p>
+							<div class="speaker-event">
+								<div class="li-yellow"></div>
+								<div>
+									<p>Carolina Herrera
+									</p>
+									<p>Domingo, 03 Octubre
+									</p>
+								</div>
 							</div>
-						</div>
-						<div class="speaker-event">
-							<div class="li-yellow"></div>
-							<div>
-								<p>Lorena Zicker</p>
-								<p>AWS Public Sector Regional Manager</p>
+
+							<div class="speaker-event">
+								<div class="li-yellow"></div>
+								<div>
+									<p>Cristina Cuetlach
+									</p>
+									<p>Sábado, 09 Octubre
+									</p>
+								</div>
 							</div>
-						</div>
-						<div class="speaker-event">
-							<div class="li-yellow"></div>
-							<div>
-								<p>Valeria Quintanilla</p>
-								<p>DevOps Specialist en Diners Club</p>
+							<div class="speaker-event">
+								<div class="li-yellow"></div>
+								<div>
+									<p>Alvar Torres (AWS)
+									</p>
+									<p>Domingo, 10 Octubre
+									</p>
+								</div>
 							</div>
-						</div>
-						<div class="speaker-event">
-							<div class="li-yellow"></div>
-							<div>
-								<p>Lorena Zicker</p>
-								<p> Cloud Engineer en Globant</p>
+							<div class="speaker-event">
+								<div class="li-yellow"></div>
+								<div>
+									<p>Rodrigo Cabrera (AWS)
+									</p>
+									<p>Sábado, 16 Octubre
+									</p>
+								</div>
 							</div>
-						</div>
-						<div class="div-footer-card">
-							<div class="ml-auto">
-								<span>¿Te lo perdiste?</span> <a href="https://www.twitch.tv/videos/732430780" target="_blank" rel="noopener noreferrer"><button type="button" class="btn btn-register">Mira la grabación</button></a>
+
+							<div class="speaker-event">
+								<div class="li-yellow"></div>
+								<div>
+									<p>Maria Isabel
+									</p>
+									<p>Domingo, 17 Octubre
+									</p>
+								</div>
+							</div>
+							<div class="speaker-event">
+								<div class="li-yellow"></div>
+								<div>
+									<p>Ana Barragan
+									</p>
+									<p>Sábado, 23 Octubre
+									</p>
+								</div>
+							</div>
+							<div class="speaker-event">
+								<div class="li-yellow"></div>
+								<div>
+									<p>Doris Manrique
+									</p>
+									<p>Domingo, 24 Octubre
+									</p>
+								</div>
+							</div>
+							<div class="speaker-event">
+								<div class="li-yellow"></div>
+								<div>
+									<p>Mayra Espinoza
+									</p>
+									<p>Sábado, 30 Octubre
+									</p>
+								</div>
+							</div>
+							<div class="speaker-event">
+								<div class="li-yellow"></div>
+								<div>
+									<p>Ana Cunha (AWS)
+									</p>
+									<p>Domingo, 31 Octubre
+									</p>
+								</div>
+							</div>
+							<div class="speaker-event">
+								<div class="li-yellow"></div>
+								<div>
+									<p>Walter Levano
+									</p>
+									<p>Sábado, 06 Noviembre
+									</p>
+								</div>
+							</div>
+							<div class="speaker-event">
+								<div class="li-yellow"></div>
+								<div>
+									<p>Anita Quevedo
+									</p>
+									<p>Domingo, 07 Noviembre
+									</p>
+								</div>
+							</div>
+							<div class="speaker-event">
+								<div class="li-yellow"></div>
+								<div>
+									<p>Preparación para el examen Invitado de AWS Training and Certification
+									</p>
+									<p>Sábado, 13 Noviembre
+									</p>
+								</div>
+							</div>
+
+							<div class="div-footer-card">
+								<div class="ml-auto">
+									<span class="text-event">¿Te interesa?</span> <a href="https://www.eventbrite.com/e/get-aws-certified-solutions-architect-challenge-aws-girls-peru-tickets-166518843343" target="_blank"><button type="button" class="btn btn-register btn-event">¡Regístrate ahora!</button></a> 
+								</div>
 							</div>
 						</div>
 					</div>
 				</div>
 			</div>
-		</div>
-	</section> 
+		</section> 
 
 	<div class="container">
 		<div class="div-twitch">
