add simeon volunteers

--- a/index.html
+++ b/index.html
@@ -593,20 +593,20 @@
 						</div>
 					</div>
 				</div>
-				<!-- <div class="col-sm-4 ">
+				<div class="col-sm-4 ">
 					<div class="card-volunteers">
 						<div>
-							<img  class="img-photo" src="assets/img/volunteers/anitaquevedo.jpg" alt="">
+							<img  class="img-photo" src="assets/img/volunteers/simeon.jpeg" alt="">
 						</div>
 						<div class="ml-3">
-							<p>Anita Quevedo
+							<p>Simeón Peralta 
 							</p>
-							<a href="https://www.linkedin.com/in/aquevedos91/" target="_blank">
+							<a href="https://www.linkedin.com/in/sime%C3%B3n-canadeo-peralta-villanueva-87077887/" target="_blank">
 								<img class="img-linkedin" src="assets/img/linkedin-icon.png" alt="">
 							</a>
 						</div>
 					</div>
-				</div> -->
+				</div>
 				<!-- <div class="col-sm-4 ">
 					<div class="card-volunteers">
 						<div>
@@ -622,121 +622,9 @@
 				</div> -->
 			</div>
 			
-			<!-- <div class="row"> -->
-				<!-- <div class="col-sm-4 ">
-					<div class="card-volunteers">
-						<div>
-							<img  class="img-photo" src="assets/img/volunteers/nefi.jpeg" alt="">
-						</div>
-						<div class="ml-3">
-							<p>Nefi Arroyo Ayzana</p>
-							<a href="https://www.linkedin.com/in/nefiarroyo/" target="_blank">
-								<img class="img-linkedin" src="assets/img/linkedin-icon.png" alt="">
-							</a>
-						</div>
-					</div>
-				</div> -->
-				<!-- <div class="col-sm-4 ">
-					<div class="card-volunteers">
-						<div>
-							<img  class="img-photo" src="assets/img/volunteers/walter.jpeg" alt="">
-						</div>
-						<div class="ml-3">
-							<p>Walter Levano</p>
-							<a href="https://www.linkedin.com/in/walter-levano-mba-devops-itil-cobit-cloudf-04a27553/" target="_blank">
-								<img class="img-linkedin" src="assets/img/linkedin-icon.png" alt="">
-							</a>
-						</div>
-					</div>
-				</div> -->
-				<!-- <div class="col-sm-4 ">
-					<div class="card-volunteers">
-						<div>
-							<img  class="img-photo" src="assets/img/volunteers/bianca.jpeg" alt="">
-						</div>
-						<div class="ml-3">
-							<p>Bianca Torres</p>
-							<a href="https://www.linkedin.com/in/bianca-torres-chumbes/" target="_blank">
-								<img class="img-linkedin" src="assets/img/linkedin-icon.png" alt="">
-							</a>
-						</div>
-					</div>
-				</div> -->
-			<!-- </div> -->
-
-			<!-- <div class="row"> -->
-				<!-- <div class="col-sm-4 ">
-					<div class="card-volunteers">
-						<div>
-							<img  class="img-photo" src="assets/img/volunteers/kiara.jpeg" alt="">
-						</div>
-						<div class="ml-3">
-							<p>Kiara Ezquerra Ferruzo</p>
-							<a href="https://www.linkedin.com/in/kiara-ezquerra-ferruzo-91588a120/" target="_blank">
-								<img class="img-linkedin" src="assets/img/linkedin-icon.png" alt="">
-							</a>
-						</div>
-					</div>
-				</div> -->
-				<!-- <div class="col-sm-4 ">
-					<div class="card-volunteers">
-						<div>
-							<img  class="img-photo" src="assets/img/volunteers/jenny.jpeg" alt="">
-						</div>
-						<div class="ml-3">
-							<p>Jenny Lucia Vega</p>
-							<a href="https://www.linkedin.com/in/jennyvegag/" target="_blank">
-								<img class="img-linkedin" src="assets/img/linkedin-icon.png" alt="">
-							</a>
-						</div>
-					</div>
-				</div> -->
-				<!-- <div class="col-sm-4 ">
-					<div class="card-volunteers">
-						<div>
-							<img  class="img-photo" src="assets/img/volunteers/ada.jpeg" alt="">
-						</div>
-						<div class="ml-3">
-							<p>Ada Reida Parhuana</p>
-							<a href="https://www.linkedin.com/in/ada-reida-parhuana-agama-a38964175/" target="_blank">
-								<img class="img-linkedin" src="assets/img/linkedin-icon.png" alt="">
-							</a>
-						</div>
-					</div>
-				</div> -->
-			<!-- </div> -->
+		
 
 
-
-			<div class="row">
-				
-				<div class="col-sm-4 ">
-					<!-- <div class="card-volunteers">
-						<div>
-							<img  class="img-photo" src="assets/img/volunteers/jenny.jpeg" alt="">
-						</div>
-						<div class="ml-3">
-							<p>Jenny Lucia Vega</p>
-							<a href="https://www.linkedin.com/in/jennyvegag/" target="_blank">
-								<img class="img-linkedin" src="assets/img/linkedin-icon.png" alt="">
-							</a>
-						</div>
-					</div> -->
-				</div>
-				<div class="col-sm-4 ">
-					<!--<div class="card-volunteers">
-						 <div>
-							<img  class="img-photo" src="assets/img/volunteers/ada.jpeg" alt="">
-						</div>
-						<div class="ml-3">
-							<p>Ada Reida Parhuana</p>
-							<a href="https://www.linkedin.com/in/ada-reida-parhuana-agama-a38964175/" target="_blank">
-								<img class="img-linkedin" src="assets/img/linkedin-icon.png" alt="">
-							</a>
-						</div>
-					</div> -->
-				</div>
-			</div>
 
 
 		</div>
